--- a/pingyougou-web-shop/src/main/webapp/admin/home.html
+++ b/pingyougou-web-shop/src/main/webapp/admin/home.html
@@ -48,7 +48,7 @@
                             <div class="icon">
                                 <i class="ion ion-bag"></i>
                             </div>
-                            <a href="all-order-manage-list.html" class="small-box-footer">详细 <i class="fa fa-arrow-circle-right"></i></a>
+                            <a href="order.html" class="small-box-footer">详细 <i class="fa fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
                     <!-- ./col -->
